Pages blod and about created

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<html lang="en">
+<html lang="en">  
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -12,13 +12,13 @@
 	</head>
 	<body>
 
-		<nav>
+        <nav>
             <a href="/">Home</a>
             <a href="/about">About Me</a>
             <a href="/blog">Blog</a>
         </nav>
-		
-		<h2>Astro</h2>
-		<h1>Mi Blog con Astro</h1>
+
+		<h1>Sobre mí</h1>
+        <p>Soy Domingo Uribe, luthier especializado en la flauta americana ancestral conocida como "quena".</p>
 	</body>
 </html>
