--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,13 +12,13 @@
 	</head>
 	<body>
 
-		<nav>
+        <nav>
             <a href="/">Home</a>
             <a href="/about">About Me</a>
             <a href="/blog">Blog</a>
         </nav>
-		
-		<h2>Astro</h2>
-		<h1>Mi Blog con Astro</h1>
+        
+		<h1>Blog</h1>
+        <p>En esta sección podrás leer todos mis artículos acerca de la quena, sobre maderas y sus características y sobre música en general</p>
 	</body>
 </html>
