Title pages updated

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,7 +8,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Blog Domingo Uribe - Artículos</title>
 	</head>
 	<body>
 
@@ -17,7 +17,7 @@
             <a href="/about">About Me</a>
             <a href="/blog">Blog</a>
         </nav>
-        
+
 		<h1>Blog</h1>
         <p>En esta sección podrás leer todos mis artículos acerca de la quena, sobre maderas y sus características y sobre música en general</p>
 	</body>
