--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Blog Domingo Uribe - Home</title>
 	</head>
 	<body>
 
@@ -17,7 +17,7 @@
             <a href="/about">About Me</a>
             <a href="/blog">Blog</a>
         </nav>
-		
+
 		<h2>Astro</h2>
 		<h1>Mi Blog con Astro</h1>
 	</body>
