I added dinamyc content to about

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,5 +20,20 @@
 
 		<h1>Blog</h1>
         <p>En esta sección podrás leer todos mis artículos acerca de la quena, sobre maderas y sus características y sobre música en general</p>
+
+        <div class="preview-cards">
+            <div class="card">
+                <h3><a href="/posts/post-1/">Mi primer post en el Blog</a></h3>
+            </div>
+            <div class="card">
+                <h3><a href="/posts/post-2/">Mi segundo post en el Blog</a></h3>
+            </div>
+            <div class="card">
+                <h3><a href="/posts/post-3/">Mi tercer post en el Blog</a></h3>
+            </div>
+
+        </div>
+
+
 	</body>
 </html>
