--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,22 @@
 ---
+const pageTitle = "Blog Domingo Uribe - Acerca de mí";
+const blogPageTitle = 'Acerca de mí';
+
+const identify = {
+    firstName: "Domingo",
+    surName: "Uribe",
+    country: "Chile",
+    occupation: "luthier",
+    hobbies: ["tocar instrumentos de viento tradicionales", "cantar", "dibujar", "estudiar"]
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "Angular", "Astro", "CSS/SASS", "BEM", "Git/Github", "UI/UX"]
+
+
+const happy = true;
+const finished = false;
+const goal = 3;
+
 
 ---
 
@@ -8,7 +26,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Blog Domingo Uribe - Acerca de mí</title>
+		<title> {pageTitle} </title>
 	</head>
 	<body>
 
@@ -18,7 +36,28 @@
             <a href="/blog">Blog</a>
         </nav>
 
-		<h1>Sobre mí</h1>
-        <p>Soy Domingo Uribe, luthier especializado en la flauta americana ancestral conocida como "quena".</p>
+		<h1> {blogPageTitle} </h1>
+        <p>Soy {identify.firstName}  {identify.surName}, {identify.occupation} de {identify.country} especializado en la flauta americana ancestral conocida como "quena"... Pero esa no es la temática de este Blog.</p>
+        <p>Más bien es una bitácora de aprendizaje de una herramienta para construir Páginas Web de todo tipo, llamada Astro que feliz estoy aprendiendo ahora</p>
+
+        <p>Dos de mis habilidades son:</p>
+        <ul>
+            {identify.hobbies.length >= 2 &&
+            <li> {identify.hobbies[0]} y {identify.hobbies[2]} </li>
+        }
+        </ul>
+
+        <p>Mis habildades de desarrollo Web Frontend son:</p>
+        <ul>
+            {skills.map((skill) => <li>{skill}</li>)}
+        </ul>
+
+
+        { happy && <p>¡Esto feliz de aprender Astro!</p> }
+
+        { finished && <p>¡He terminado el tutorial!</p> }
+
+        { goal === 3 ? <p>Mi objetivo es terminar en 3 días</p> : <p>Mi objetivo no son 3 días</p> }
+
 	</body>
 </html>
