Edited ortography in bout

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -38,7 +38,7 @@ const goal = 3;
 
 		<h1> {blogPageTitle} </h1>
         <p>Soy {identify.firstName}  {identify.surName}, {identify.occupation} de {identify.country} especializado en la flauta americana ancestral conocida como "quena"... Pero esa no es la temática de este Blog.</p>
-        <p>Más bien es una bitácora de aprendizaje de una herramienta para construir Páginas Web de todo tipo, llamada Astro que feliz estoy aprendiendo ahora</p>
+        <p>Más bien es una bitácora de aprendizaje de una herramienta para construir Páginas Web de todo tipo, llamada Astro ¡Que feliz estoy aprendiendo ahora!</p>
 
         <p>Dos de mis habilidades son:</p>
         <ul>
@@ -53,7 +53,7 @@ const goal = 3;
         </ul>
 
 
-        { happy && <p>¡Esto feliz de aprender Astro!</p> }
+        { happy && <p>¡Estoy feliz de aprender Astro!</p> }
 
         { finished && <p>¡He terminado el tutorial!</p> }
 
