--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,6 +17,9 @@ const happy = true;
 const finished = false;
 const goal = 3;
 
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 
 ---
 
@@ -27,6 +30,19 @@ const goal = 3;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title> {pageTitle} </title>
+        
+        <style define:vars={{skillColor, fontWeight, textCase}}>
+            h1 {
+                color: peru;
+                font-size: 4rem
+            }
+            .skill {
+                /* color: green; */
+                color: var(--skillColor);
+                font-weight: var(--fontWeight);
+                text-transform: var(--textCase);
+            }
+        </style>
 	</head>
 	<body>
 
@@ -49,9 +65,8 @@ const goal = 3;
 
         <p>Mis habildades de desarrollo Web Frontend son:</p>
         <ul>
-            {skills.map((skill) => <li>{skill}</li>)}
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
-
 
         { happy && <p>¡Estoy feliz de aprender Astro!</p> }
 
