--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,7 @@
 ---
-
+import '../styles/global.css';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 ---
 
 <html lang="en">
@@ -12,11 +14,7 @@
 	</head>
 	<body>
 
-        <nav>
-            <a href="/">Home</a>
-            <a href="/about">About Me</a>
-            <a href="/blog">Blog</a>
-        </nav>
+        <Header />
 
 		<h1>Blog</h1>
         <p>En esta sección podrás leer todos mis artículos acerca de la quena, sobre maderas y sus características y sobre música en general</p>
@@ -34,6 +32,9 @@
 
         </div>
 
-
+        <Footer/>
+        <script>
+            import "../scripts/menu.js"
+        </script>
 	</body>
 </html>
